--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="image-wrap">
                 <div class="image-info">
                   <h2 class="mb-3">portraits</h2>
-                  <a href="portraits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <a href="portraits.html" class="btn btn-outline-light py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/portraits/DSC_0765-E.jpg" alt="Image">
               </div>
@@ -116,7 +116,7 @@
               <div class="image-wrap">
                 <div class="image-info">
                   <h2 class="mb-3">landscape</h2>
-                  <a href="landscape.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <a href="landscape.html" class="btn btn-outline-light py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/landscape/DSC_0001-E.jpg" alt="Image">
               </div>
@@ -125,7 +125,7 @@
               <div class="image-wrap">
                 <div class="image-info">
                   <h2 class="mb-3">graduations</h2>
-                  <a href="graduations.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <a href="graduations.html" class="btn btn-outline-light py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/graduations/DSC_0084L-E.jpg" alt="Image">
               </div>
@@ -143,7 +143,7 @@
               <div class="image-wrap">
                 <div class="image-info">
                   <h2 class="mb-3">edits</h2>
-                  <a href="edits.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <a href="edits.html" class="btn btn-outline-light py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/edits/DSC_0437-E.jpg" alt="Image">
               </div>
