--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Photon</a></h1>
+            <!-- <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Photon</a></h1> -->
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -113,7 +113,7 @@
 
           <div class="row">
             <div class="col-lg-8 mb-5">
-              <form action="#">
+              <!-- <form action="#">
 
 
                 <div class="row form-group">
@@ -157,9 +157,14 @@
                 </div>
 
 
-              </form>
+              </form> -->
             </div>
-            <div class="col-lg-3 ml-auto">
+            <div class="col-lg-12 mr-auto">
+              <div class="mb-3 bg-white">
+                <p class="mb-0 font-weight-bold">Form submission coming soon!</p>
+              </div>
+            </div>
+            <div class="col-lg-12 ml-auto">
               <div class="mb-3 bg-white">
                 <!-- <p class="mb-0 font-weight-bold">Address</p>
                 <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
