--- a/portraits.html
+++ b/portraits.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Title goes here</a></h1>
+            <!-- <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Title goes here</a></h1> -->
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -262,7 +262,6 @@
   <script src="js/picturefill.min.js"></script>
   <script src="js/lightgallery-all.min.js"></script>
   <script src="js/jquery.mousewheel.min.js"></script>
-
   <script src="js/main.js"></script>
 
   <script>
