--- a/edits.html
+++ b/edits.html
@@ -85,7 +85,7 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.linkedin.com/in/marlondgonzalez/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                 </li>
               </ul>
             </div>
@@ -117,48 +117,48 @@
       </div>
       <div class="row" id="lightgallery">
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0067-2-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0067-2-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0067-2-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0067-2-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0091-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0091-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0091-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0091-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0235-2-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0235-2-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0235-2-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0235-2-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0255-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0255-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0255-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0255-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0270-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0270-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0270-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0270-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0282-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0282-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0282-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0282-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0369-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0369-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0369-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0369-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0382-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0382-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0382-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0382-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0437-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0437-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0437-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0437-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0441-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/DSC_0441-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/DSC_0441-E.jpg">
+          <a href="#"><img src="images/edits/DSC_0441-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/Tokyo-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/edits/Tokyo-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/edits/Tokyo-E.jpg">
+          <a href="#"><img src="images/edits/Tokyo-E.jpg" class="img-fluid"></a>
         </div>
 
 
