--- a/events.html
+++ b/events.html
@@ -85,7 +85,7 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.linkedin.com/in/marlondgonzalez/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                 </li>
               </ul>
             </div>
@@ -117,72 +117,72 @@
       </div>
       <div class="row" id="lightgallery">
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0256-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0256-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0256-E.jpg">
+          <a href="#"><img src="images/events/DSC_0256-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0312-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0312-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0312-E.jpg">
+          <a href="#"><img src="images/events/DSC_0312-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0454-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0454-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0454-E.jpg">
+          <a href="#"><img src="images/events/DSC_0454-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0568-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0568-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0568-E.jpg">
+          <a href="#"><img src="images/events/DSC_0568-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0600-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0600-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0600-E.jpg">
+          <a href="#"><img src="images/events/DSC_0600-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0601-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0601-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0601-E.jpg">
+          <a href="#"><img src="images/events/DSC_0601-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0603-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0603-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0603-E.jpg">
+          <a href="#"><img src="images/events/DSC_0603-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/CORE-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/CORE-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/CORE-E.jpg">
+          <a href="#"><img src="images/events/CORE-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Performance-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Performance-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Performance-E.jpg">
+          <a href="#"><img src="images/events/Performance-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Production-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Production-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Production-E.jpg">
+          <a href="#"><img src="images/events/Production-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Public Relations-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Public Relations-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Public Relations-E.jpg">
+          <a href="#"><img src="images/events/Public Relations-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Story-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Story-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Story-E.jpg">
+          <a href="#"><img src="images/events/Story-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Tech-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Tech-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Tech-E.jpg">
+          <a href="#"><img src="images/events/Tech-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Design-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/Design-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/Design-E.jpg">
+          <a href="#"><img src="images/events/Design-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0307L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0307L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0307L-E.jpg">
+          <a href="#"><img src="images/events/DSC_0307L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0313L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0313L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0313L-E.jpg">
+          <a href="#"><img src="images/events/DSC_0313L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0667L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/events/DSC_0667L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/events/DSC_0667L-E.jpg">
+          <a href="#"><img src="images/events/DSC_0667L-E.jpg" class="img-fluid"></a>
         </div>
 
       </div>
