--- a/landscape.html
+++ b/landscape.html
@@ -85,7 +85,7 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.linkedin.com/in/marlondgonzalez/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                 </li>
               </ul>
             </div>
@@ -117,48 +117,48 @@
       </div>
       <div class="row" id="lightgallery">
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0001-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0001-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0001-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0001-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0058-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0058-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0058-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0058-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0071-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0071-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0071-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0071-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0123-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0123-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0123-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0123-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0163-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0163-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0163-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0163-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0164-2-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0164-2-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0164-2-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0164-2-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0235-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0235-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0235-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0235-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0275-2-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0275-2-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0275-2-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0275-2-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0464-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0464-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0464-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0464-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0762-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/DSC_0762-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/DSC_0762-E.jpg">
+          <a href="#"><img src="images/landscape/DSC_0762-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/IMG4-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/landscape/IMG4-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/landscape/IMG4-E.jpg">
+          <a href="#"><img src="images/landscape/IMG4-E.jpg" class="img-fluid"></a>
         </div>
 
 
