--- a/portraits.html
+++ b/portraits.html
@@ -85,7 +85,7 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.linkedin.com/in/marlondgonzalez/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                 </li>
               </ul>
             </div>
@@ -117,111 +117,111 @@
       </div>
       <div class="row" id="lightgallery">
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0209-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0209-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0209-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0209-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0223-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0223-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0223-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0223-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_02301-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_02301-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_02301-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_02301-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0241-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0241-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0241-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0241-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0249-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0249-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0249-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0249-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0250-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0250-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0250-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0250-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0253-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0253-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0253-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0253-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0279-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0279-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0279-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0279-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0281-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0281-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0281-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0281-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0283-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0283-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0283-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0283-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0308-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0308-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0308-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0308-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0319-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0319-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0319-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0319-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0335-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0335-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0335-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0335-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0346-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0346-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0346-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0346-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0362-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0362-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0362-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0362-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0673-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0673-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0673-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0673-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0675-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0675-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0675-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0675-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0701-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0701-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0701-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0701-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0723-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0723-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0723-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0723-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0728-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0728-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0728-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0728-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0763-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0763-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0763-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0763-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0764-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0764-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0764-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0764-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0765-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0765-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0765-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0765-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0780-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0780-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0780-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0780-E.jpg" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0289L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0289L-E.jpg" alt="IMage" class="img-fluid"></a>
-        </div>
-
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0417L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0417L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0289L-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0289L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0347L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/portraits/DSC_0347L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0417L-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0417L-E.jpg" class="img-fluid"></a>
+        </div>
+
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/portraits/DSC_0347L-E.jpg">
+          <a href="#"><img src="images/portraits/DSC_0347L-E.jpg" class="img-fluid"></a>
         </div>
 
 
