--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-0 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.linkedin.com/in/marlondgonzalez/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                 </li>
               </ul>
             </div>
@@ -125,7 +125,8 @@
               <img src="images/portraits/DSC_0362-E.jpg" alt="Images" class="img-fluid">
             </div>
             <div class="col-md-4 ml-auto">
-              <p>Feel free to contact me for more information! :)</p>
+              <p>Feel free to <a href="contact.html">contact</a> me for more information! :)</p>
+              <a href="https://colorlib.com" target="_" >Colorlib</a>
             </div>
           </div>
         </div>
