--- a/graduations.html
+++ b/graduations.html
@@ -85,7 +85,7 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.linkedin.com/in/marlondgonzalez/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                 </li>
               </ul>
             </div>
@@ -117,124 +117,124 @@
       </div>
       <div class="row" id="lightgallery">
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0122-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0122-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0122-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0122-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0139-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0139-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0139-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0139-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0141-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0141-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0141-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0141-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0151-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0151-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0151-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0151-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0226-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0226-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0226-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0226-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0228-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0228-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0228-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0228-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0248-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0248-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0248-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0248-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0276-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0276-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0276-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0276-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0285-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0285-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0285-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0285-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0344-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0344-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0344-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0344-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0354-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0354-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0354-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0354-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0363-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0363-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0363-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0363-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0565-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0565-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0565-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0565-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0569-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0569-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0569-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0569-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0796-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0796-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0796-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0796-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0813-1-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0813-1-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0813-1-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0813-1-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0817-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0817-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0817-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0817-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0013-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0013-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0013-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0013-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0022-Edit-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0022-Edit-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0022-Edit-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0022-Edit-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0023-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0023-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0023-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0023-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0548L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0548L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0548L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0548L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0245L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0245L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0245L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0245L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0642L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0642L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0642L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0642L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0184L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0184L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0184L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0184L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0190L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0190L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0190L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0190L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0220L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0220L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0220L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0220L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_4566L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_4566L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_4566L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_4566L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0084L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0084L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0084L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0084L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0099L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0099L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0099L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0099L-E.jpg" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0826L-E.jpg" data-sub-html="<h4>Fading Light</h4><p>text</p>">
-          <a href="#"><img src="images/graduations/DSC_0826L-E.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/graduations/DSC_0826L-E.jpg">
+          <a href="#"><img src="images/graduations/DSC_0826L-E.jpg" class="img-fluid"></a>
         </div>
 
 
